Fix currency question focus gap

--- a/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
+++ b/server/app/assets/stylesheets/northstar/_uswds-theme-custom-styles.scss
@@ -145,6 +145,14 @@ it is around the label */
   @include u-padding-left('105');
 }
 
+/*
+ * Ensure the focused input is above the error border of the input group
+ * so the focus ring has a gap for greater accessibility.
+ */
+.usa-input-group--error > .usa-input:focus {
+  outline-offset: 8px;
+}
+
 /**
  * Reduce default padding on labels within question to match spacing mocks.
  */
